调整页面样式。

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>用户轨迹跟踪</title>
+    <title>联想大数据分析</title>
     <style type="text/css" >
     	body{
     		background-color: #f1f1f1;
